// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary showing 0 or multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    0
     expenses totalling 
    $0.00
  </h1>
</div>
`;

exports[`should render ExpenseSummary showing 0 or multiple expenses 2`] = `
<div>
  <h1>
    Viewing 
    3
     expenses totalling 
    $1,141.95
  </h1>
</div>
`;

exports[`should render ExpenseSummary showing 1 expense 1`] = `
<div>
  <h1>
    Viewing 1 expense totalling 
    $1.95
  </h1>
</div>
`;
